{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "883f0fb4-2a56-408f-b392-8b6584c96572",
            "actions": [
                {
                    "name": "LanderUp",
                    "type": "Button",
                    "id": "ccb510c3-a7ea-45a3-99b6-faed3dd68ec3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LanderLeft",
                    "type": "Button",
                    "id": "addfb904-dc63-4ad2-b1df-835ee876b1da",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LanderRight",
                    "type": "Button",
                    "id": "21357f85-f127-4a5a-a9b3-1b9af7b3d472",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d662c138-5182-40d5-b32d-789cb6446987",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60c6de64-d98e-4057-be29-95a7254d30ad",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ade3dcc-4516-4e4d-9d5e-c1e028a7fe9e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ddada6d-d6b0-42f5-8099-c24959702f30",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d3c92f9-2b7c-408f-9e33-7db0e525a1f3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f61e4d71-4a88-4b85-831d-b60273b93476",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LanderRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}